<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.guojia.robot.fragment.PersonSettingFragment">

    <!-- TODO: Update blank fragment layout -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/person_set_tv_height"
            android:textSize="@dimen/person_base_textsize"
            android:id="@+id/person_set_change_pwd"
            android:drawableRight="@mipmap/intor_right_icon"
            android:text="@string/person_set_pwd"
            android:gravity="center_vertical"
            />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#CCCCCC"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/person_set_tv_height"
        android:textSize="@dimen/person_base_textsize"
        android:id="@+id/person_set_voice_ver"
        android:drawableRight="@mipmap/intor_right_icon"
        android:text="@string/person_set_voice_ver"
        android:gravity="center_vertical"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#CCCCCC"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/person_set_tv_height"
        android:textSize="@dimen/person_base_textsize"
        android:id="@+id/person_set_face_ver"
        android:drawableRight="@mipmap/intor_right_icon"
        android:text="@string/person_set_face_ver"
        android:gravity="center_vertical"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#CCCCCC"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/person_set_tv_height"
        android:textSize="@dimen/person_base_textsize"
        android:id="@+id/person_set_about_us"
        android:drawableRight="@mipmap/intor_right_icon"
        android:text="@string/person_set_about_us"
        android:gravity="center_vertical"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#CCCCCC"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/person_set_tv_height"
        android:textSize="@dimen/person_base_textsize"
        android:id="@+id/person_set_help"
        android:drawableRight="@mipmap/intor_right_icon"
        android:text="@string/person_set_help"
        android:gravity="center_vertical"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#CCCCCC"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/person_set_tv_height"
        android:textSize="@dimen/person_base_textsize"
        android:id="@+id/person_set_kefu_num"
        android:drawableRight="@mipmap/intor_right_icon"
        android:text="@string/person_set_kefu_num"
        android:gravity="center_vertical"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#CCCCCC"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/person_set_tv_height"
        android:textSize="@dimen/person_base_textsize"
        android:id="@+id/person_set_clear"
        android:drawableRight="@mipmap/intor_right_icon"
        android:text="@string/person_set_clear"
        android:gravity="center_vertical"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#CCCCCC"/>

</LinearLayout>
