<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <RelativeLayout
        android:layout_width="475dp"
        android:layout_height="255dp">

        <com.guojia.robot.view.ShadowLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:sl_shadowColor="@color/shadow"
            app:sl_dx="2dp"
            app:sl_dy="2dp">
            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="180dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:background="@drawable/layout_bg_shape">
                <TextView
                    android:id="@+id/tv_regist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/regist_regist"
                    android:textColor="@color/text_gray_1"
                    android:textSize="20sp"/>
                <EditText
                    android:id="@+id/et_id"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/regist_id"
                    android:textSize="10sp"
                    android:textColorHint="@color/text_gray_3"
                    android:textColor="@color/text_gray_1"
                    android:background="@drawable/edittext_bg_shape"/>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp">
                    <TextView
                        android:id="@+id/tv_code"
                        android:layout_width="45dp"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true"
                        android:gravity="center"
                        android:text="@string/regist_code_num"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:background="@drawable/code_bg_shape"/>

                    <EditText
                        android:id="@+id/et_code"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_toLeftOf="@id/tv_code"
                        android:layout_marginRight="8dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:gravity="center_vertical"
                        android:hint="@string/regist_code"
                        android:textSize="10sp"
                        android:textColorHint="@color/text_gray_3"
                        android:textColor="@color/text_gray_1"
                        android:background="@drawable/edittext_bg_shape"/>
                </RelativeLayout>
            </LinearLayout>
        </com.guojia.robot.view.ShadowLayout>

        <com.guojia.robot.view.ShadowLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            app:sl_shadowColor="@color/shadow"
            app:sl_dx="2dp"
            app:sl_dy="2dp">
            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="180dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:background="@drawable/layout_bg_shape">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/regist_set_pwd"
                    android:textColor="@color/text_gray_1"
                    android:textSize="20sp"/>
                <EditText
                    android:id="@+id/et_new_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/regist_new_pwd"
                    android:textSize="10sp"
                    android:inputType="textPassword"
                    android:textColorHint="@color/text_gray_3"
                    android:textColor="@color/text_gray_1"
                    android:background="@drawable/edittext_bg_shape"/>
                <EditText
                    android:id="@+id/et_again_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/regist_again_pwd"
                    android:textSize="10sp"
                    android:inputType="textPassword"
                    android:textColorHint="@color/text_gray_3"
                    android:textColor="@color/text_gray_1"
                    android:background="@drawable/edittext_bg_shape"/>
            </LinearLayout>
        </com.guojia.robot.view.ShadowLayout>

        <Button
            android:id="@+id/bt_regist"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:text="@string/regist_ok"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:background="@drawable/login_button_shape"/>

    </RelativeLayout>

</LinearLayout>
