<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.guojia.robot.view.ShadowLayout
        android:id="@+id/ll_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:sl_shadowColor="@color/shadow"
        app:sl_dx="2dp"
        app:sl_dy="2dp">
        <RelativeLayout
            android:layout_width="400dp"
            android:layout_height="490dp"
            android:background="@drawable/layout_bg_shape">
            <TextView
                android:id="@+id/tv_zszw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:text="@string/login_zszw"
                android:textColor="@color/text_gray_1"
                android:textSize="26sp"/>
            <View
                android:id="@+id/view_line_center"
                android:layout_width="1px"
                android:layout_height="0px"
                android:layout_centerHorizontal="true"/>
            <ImageView
                android:id="@+id/iv_face"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_below="@+id/tv_zszw"
                android:layout_toLeftOf="@+id/view_line_center"
                android:layout_marginTop="100dp"
                android:layout_marginRight="40dp"
                android:src="@mipmap/login_face"/>
            <ImageView
                android:id="@+id/iv_voice"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_below="@+id/tv_zszw"
                android:layout_toRightOf="@+id/view_line_center"
                android:layout_marginTop="100dp"
                android:layout_marginLeft="40dp"
                android:src="@mipmap/login_voice"/>
        </RelativeLayout>
    </com.guojia.robot.view.ShadowLayout>

    <com.guojia.robot.view.ShadowLayout
        android:id="@+id/ll_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/ll_center"
        android:layout_marginLeft="8dp"
        app:sl_shadowColor="@color/shadow"
        app:sl_dx="2dp"
        app:sl_dy="2dp">
        <RelativeLayout
            android:layout_width="400dp"
            android:layout_height="490dp"
            android:background="@drawable/layout_bg_shape">
            <TextView
                android:id="@+id/tv_sfdl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:text="@string/login_sfdl"
                android:textColor="@color/text_gray_1"
                android:textSize="26sp"/>
            <View
                android:id="@+id/view_line_right"
                android:layout_width="1px"
                android:layout_height="0px"
                android:layout_centerHorizontal="true"/>
            <ImageView
                android:id="@+id/iv_wechat"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_below="@+id/tv_sfdl"
                android:layout_toLeftOf="@+id/view_line_right"
                android:layout_marginTop="100dp"
                android:layout_marginRight="40dp"
                android:src="@mipmap/login_wechat"/>
            <ImageView
                android:id="@+id/iv_qq"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_below="@+id/tv_sfdl"
                android:layout_toRightOf="@+id/view_line_right"
                android:layout_marginTop="100dp"
                android:layout_marginLeft="40dp"
                android:src="@mipmap/login_qq"/>
            <ImageView
                android:id="@+id/iv_weibo"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_below="@+id/iv_wechat"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:src="@mipmap/login_weibo"/>
        </RelativeLayout>
    </com.guojia.robot.view.ShadowLayout>

    <com.guojia.robot.view.ShadowLayout
        android:id="@+id/ll_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@id/ll_center"
        android:layout_marginRight="8dp"
        app:sl_shadowColor="@color/shadow"
        app:sl_dx="2dp"
        app:sl_dy="2dp">
        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="490dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:background="@drawable/layout_bg_shape">
            <TextView
                android:id="@+id/tv_dlzc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/login_dlzc"
                android:textColor="@color/text_gray_1"
                android:textSize="26sp"/>
            <EditText
                android:id="@+id/et_id"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:gravity="center_vertical"
                android:hint="@string/login_id"
                android:textSize="20sp"
                android:textColorHint="@color/text_gray_3"
                android:textColor="@color/text_gray_1"
                android:background="@drawable/edittext_bg_shape"/>
            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:gravity="center_vertical"
                android:hint="@string/login_pwd"
                android:textSize="20sp"
                android:inputType="textPassword"
                android:textColorHint="@color/text_gray_3"
                android:textColor="@color/text_gray_1"
                android:background="@drawable/edittext_bg_shape"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp">
                <ImageView
                    android:id="@+id/iv_remember_pwd"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginRight="5dp"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/login_checkbox_n"/>
                <TextView
                    android:id="@+id/tv_remember_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/iv_remember_pwd"
                    android:text="@string/login_remember_pwd"
                    android:textColor="@color/text_gray_2"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/tv_forget_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/login_forget_pwd"
                    android:textColor="@color/text_gray_2"
                    android:textSize="20sp"/>
            </RelativeLayout>
            <Button
                android:id="@+id/bt_login"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:text="@string/login_login"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:background="@drawable/login_button_shape"/>
            <TextView
                android:id="@+id/tv_regist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:text="@string/login_regist"
                android:textColor="@color/text_gray_2"
                android:textSize="20sp"/>
        </LinearLayout>
    </com.guojia.robot.view.ShadowLayout>

    <TextView
        android:id="@+id/tv_noidlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="30dp"
        android:text="@string/login_tourist"
        android:textColor="@color/text_gray_2"
        android:textSize="20sp"/>

</RelativeLayout>
