<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/person_content"
    tools:context="com.guojia.robot.activity.PersonalActivity">
<include layout="@layout/mode_top_bar_layout"
    />
    <LinearLayout
        android:id="@+id/person_left_layout"
        android:orientation="vertical"
        android:background="@color/person_main_color"
        android:layout_width="364dp"
        android:layout_height="match_parent"
        android:layout_below="@+id/mode_top_bar"
       >
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center_vertical"
            android:id="@+id/setting_data_layout"
            android:background="@color/person_item_onlick_color"
            android:padding="15dp">
            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@color/white"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:text="@string/setting_data"
                android:textColor="@color/black"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center_vertical"
            android:id="@+id/base_data_layout"
            android:padding="15dp">
            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@color/white"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:text="@string/person_base_data"
                android:textColor="@color/black"
                />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/person_login_out_btn"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:text="@string/login_out"
        android:background="@drawable/person_btn_shape"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="75dp"
        android:layout_marginLeft="100dp"
        />
    <RelativeLayout
        android:id="@+id/person_right_layout"
        android:layout_toRightOf="@+id/person_left_layout"
        android:layout_below="@+id/mode_top_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        ></RelativeLayout>
</RelativeLayout>
